k8s/app/flask-sample-app-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: flask-sample-app
spec:
  containers:
    - name: flask-sample-app
      image: docker.io/harshasridhar/flask-sample-app:v1.0.0
      imagePullPolicy: IfNotPresent
  restartPolicy: Always
