k8s/app/flask-sample-app-with-secret-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: flask-sample-app
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-sample-app
  template:
    metadata:
      labels:
        app: flask-sample-app
    spec:
      containers:
        - name: flask-sample-app
          image: flask-sample-app:v1.0.1
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
