k8s/app/flask-sample-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-sample-app
spec:
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  selector:
    app: flask-sample-app
  type: LoadBalancer
