k8s/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  ingressClassName: nginx-example
  rules:
    - http:
        paths:
          - path: /flask
            pathType: ImplementationSpecific
            backend:
              service:
                name: flask-sample-app
                port:
                  number: 8000
